| Summary: | ASTERISK-29764: chan_misdn: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-20 04:06:03.000-0600 | Date Closed: | 2021-11-29 08:41:05.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_misdn Documentation |
| Versions: | 16.22.0 18.8.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | One more thing, affecting not branch master or branch 19 but Asterisk 18 LTS and Asterisk 16 LTS.If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} channels/chan_misdn.c:7794: warning: documented empty return type of chan_list_destructor channels/chan_misdn.c:3426: warning: documented empty return type of misdn_add_number_prefix channels/chan_misdn.c:6384: warning: documented empty return type of misdn_copy_redirecting_from_ast channels/chan_misdn.c:6439: warning: documented empty return type of misdn_copy_redirecting_to_ast channels/chan_misdn.c:9097: warning: documented empty return type of misdn_facility_ie_handler channels/chan_misdn.c:6228: warning: documented empty return type of misdn_get_connected_line channels/chan_misdn.c:3383: warning: documented empty return type of misdn_prefix_string channels/chan_misdn.c:6137: warning: documented empty return type of misdn_queue_connected_line_update channels/chan_misdn.c:6173: warning: documented empty return type of misdn_update_caller_id channels/chan_misdn.c:6302: warning: documented empty return type of misdn_update_connected_line channels/chan_misdn.c:6485: warning: documented empty return type of misdn_update_redirecting channels/chan_misdn.c:6212: warning: documented empty return type of misdn_update_remote_party channels/chan_misdn.c:8497: warning: documented empty return type of release_chan channels/chan_misdn.c:8563: warning: documented empty return type of release_chan_early channels/misdn/isdn_lib.c:679: warning: documented empty return type of empty_bc channels/misdn/isdn_lib.c:605: warning: documented empty return type of empty_chan_in_stack channels/misdn/isdn_msg_parser.c:42: warning: documented empty return type of build_display_str channels/misdn/isdn_msg_parser.c:120: warning: documented empty return type of dec_ie_facility channels/misdn/isdn_msg_parser.c:77: warning: documented empty return type of enc_ie_facility {code}This channel driver has two #ifdef conditionals. When those are defined/activated, even more warnings appear. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-20 04:06:05.163-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-29 08:41:06.534-0600 Change 17567 merged by Friendly Automation: chan_misdn: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17567|https://gerrit.asterisk.org/c/asterisk/+/17567] By: Friendly Automation (friendly-automation) 2021-11-29 09:04:28.366-0600 Change 17516 merged by George Joseph: chan_misdn: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17516|https://gerrit.asterisk.org/c/asterisk/+/17516] | ||