chan_misdn: Fix for Doxygen.

ASTERISK-29764

Change-Id: I6e5466cce03e25695c5c7d8b68c305184dcf5375